--- a/presentation/src/main/res/layout-sw600dp/fragment_game_details.xml
+++ b/presentation/src/main/res/layout-sw600dp/fragment_game_details.xml
@@ -1,8 +1,8 @@
 <!-- Adding the same root's ID for view binding as other layout configurations -->
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/item_detail_container"
   android:layout_width="match_parent"
+  android:background="@color/purple_200"
   android:layout_height="match_parent">
 
   <TextView
@@ -11,6 +11,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    android:textIsSelectable="true"
-    tools:context="com.github.gamelisting.GameDetailsFragment" />
+    android:textIsSelectable="true" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
