--- a/presentation/src/main/res/layout/fragment_game_details.xml
+++ b/presentation/src/main/res/layout/fragment_game_details.xml
@@ -6,6 +6,7 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".MainActivity"
+  android:background="@color/purple_200"
   tools:ignore="MergeRootFrame">
 
   <androidx.core.widget.NestedScrollView
