--- a/presentation/src/main/res/navigation/primary_details_nav_graph.xml
+++ b/presentation/src/main/res/navigation/primary_details_nav_graph.xml
@@ -7,7 +7,7 @@
 
   <fragment
     android:id="@+id/games_fragment"
-    android:name="com.github.gamelisting.GamesFragment"
+    android:name="com.github.gamelisting.features.main.GamesFragment"
     tools:layout="@layout/fragment_games">
     <action
       android:id="@+id/show_game_details"
@@ -19,7 +19,7 @@
   </fragment>
   <fragment
     android:id="@+id/game_details_fragment"
-    android:name="com.github.gamelisting.GameDetailsFragment"
+    android:name="com.github.gamelisting.features.details.GameDetailsFragment"
     tools:layout="@layout/fragment_game_details">
     <argument
       android:name="game_id"
