--- a/presentation/src/main/res/values-land/dimens.xml
+++ b/presentation/src/main/res/values-land/dimens.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <dimen name="fab_margin">48dp</dimen>
-  <dimen name="container_horizontal_margin">48dp</dimen>
+  <dimen name="guide_line_begin">400dp</dimen>
+  <dimen name="grid_item_width">320dp</dimen>
 </resources>
