--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
   <color name="teal_700">#FF018786</color>
   <color name="black">#FF000000</color>
   <color name="white">#FFFFFFFF</color>
+  <color name="trans_black">#80000000</color>
+  <color name="grey">#1E1E1E</color>
+  <color name="light_grey">#303030</color>
 </resources>
