--- a/presentation/src/main/res/layout-sw600dp/fragment_game_details.xml
+++ b/presentation/src/main/res/layout-sw600dp/fragment_game_details.xml
@@ -1,15 +1,17 @@
-<!-- Adding the same root's ID for view binding as other layout configurations -->
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   android:id="@+id/item_detail_container"
   android:layout_width="match_parent"
-  android:background="@color/purple_200"
   android:layout_height="match_parent">
 
-  <TextView
-    android:id="@+id/item_detail"
-    style="?android:attr/textAppearanceLarge"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp"
-    android:textIsSelectable="true" />
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+  <include
+    android:id="@+id/gameDetailsEmptyView"
+    layout="@layout/layout_empty_view"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:visibility="gone"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
