--- a/presentation/src/main/res/layout/item_game.xml
+++ b/presentation/src/main/res/layout/item_game.xml
@@ -55,7 +55,7 @@
       android:lines="2"
       android:maxLines="2"
       android:padding="6dp"
-      android:textColor="@color/design_default_color_on_primary"
+      android:textColor="@color/white"
       android:textSize="16sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
