--- a/presentation/src/main/res/layout/layout_error_view.xml
+++ b/presentation/src/main/res/layout/layout_error_view.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
-  android:layout_height="match_parent">
+  android:layout_height="match_parent"
+  android:background="?android:colorBackground">
 
   <androidx.appcompat.widget.AppCompatImageView
     android:layout_width="200dp"
@@ -19,11 +20,11 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
+    android:fontFamily="@font/maven_pro_bold"
     android:gravity="center"
     android:text="@string/error_view_message_title"
     android:textColor="?colorOnSecondary"
     android:textSize="18sp"
-    android:textStyle="bold"
     app:layout_constraintBottom_toTopOf="@+id/errorViewSubtitleText"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent" />
@@ -32,6 +33,7 @@
     android:id="@+id/errorViewSubtitleText"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:fontFamily="@font/maven_pro_semi_bold"
     android:gravity="center"
     android:text="@string/error_view_message_subtitle"
     android:textSize="14sp"
@@ -53,6 +55,7 @@
     android:layout_marginHorizontal="18dp"
     android:layout_marginBottom="14dp"
     android:backgroundTint="?colorOnSecondary"
+    android:fontFamily="@font/maven_pro_semi_bold"
     android:minHeight="60dp"
     android:stateListAnimator="@null"
     android:text="@string/error_view_retry_button"
