--- a/presentation/src/main/res/layout/layout_game_details.xml
+++ b/presentation/src/main/res/layout/layout_game_details.xml
@@ -11,7 +11,6 @@
     android:id="@+id/gameDetailsNameTextView"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:autoLink="web|email"
     android:fontFamily="@font/maven_pro_bold"
     android:gravity="start"
     android:textColor="?colorOnSecondary"
@@ -20,6 +19,34 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     tools:text="Call of duty" />
+
+  <androidx.appcompat.widget.AppCompatTextView
+    android:id="@+id/gameDetailsReleaseDateTextView"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
+    android:fontFamily="@font/maven_pro_semi_bold"
+    android:gravity="start"
+    android:text="@string/game_details_release_date_title"
+    android:textColor="?colorOnSecondary"
+    android:textSize="14sp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/gameDetailsNameTextView" />
+
+  <androidx.appcompat.widget.AppCompatTextView
+    android:id="@+id/gameDetailsReleaseDateValueTextView"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
+    android:fontFamily="@font/maven_pro_regular"
+    android:gravity="start"
+    android:textColor="?colorOnSecondary"
+    android:textSize="16sp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/gameDetailsReleaseDateTextView"
+    tools:text="bla bla bla bla" />
 
   <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/gameDetailsRatingsRecycler"
@@ -32,7 +59,9 @@
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/gameDetailsNameTextView" />
+    app:layout_constraintTop_toBottomOf="@+id/gameDetailsReleaseDateValueTextView"
+    tools:itemCount="4"
+    tools:listitem="@layout/item_game_rating" />
 
   <androidx.appcompat.widget.AppCompatTextView
     android:id="@+id/gameDetailsDescriptionTitleTextView"
@@ -82,7 +111,6 @@
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
-    android:autoLink="web|email"
     android:fontFamily="@font/maven_pro_regular"
     android:gravity="start"
     android:textColor="?colorOnSecondary"
