--- a/presentation/src/main/res/drawable/shape_rounded_left_corners.xml
+++ b/presentation/src/main/res/drawable/shape_rounded_left_corners.xml
@@ -2,5 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
   android:shape="rectangle">
   <solid android:color="?colorOnPrimary" />
-  <corners android:radius="8dp" />
+  <corners
+    android:bottomLeftRadius="8dp"
+    android:topLeftRadius="8dp" />
 </shape>
