--- a/presentation/src/main/res/layout/item_game.xml
+++ b/presentation/src/main/res/layout/item_game.xml
@@ -16,8 +16,7 @@
     <androidx.appcompat.widget.AppCompatImageView
       android:id="@+id/itemImagePosterImageView"
       android:layout_width="170dp"
-      android:layout_height="0dp"
-      android:scaleType="centerCrop"
+      android:layout_height="260dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
@@ -27,10 +26,8 @@
       android:id="@+id/itemImageRatingTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_gravity="center"
-      android:layout_marginStart="4dp"
-      android:layout_marginTop="4dp"
-      android:background="@drawable/shape_rounded_corners"
+      android:layout_marginTop="6dp"
+      android:background="@drawable/shape_rounded_right_corners"
       android:drawablePadding="4dp"
       android:fontFamily="@font/maven_pro_regular"
       android:gravity="center"
@@ -43,6 +40,23 @@
       app:layout_constraintTop_toTopOf="parent"
       tools:ignore="SmallSp"
       tools:text="4.99" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+      android:id="@+id/itemImageDateTextView"
+      android:layout_width="wrap_content"
+      android:layout_height="0dp"
+      android:background="@drawable/shape_rounded_left_corners"
+      android:fontFamily="@font/maven_pro_regular"
+      android:gravity="center"
+      android:paddingHorizontal="6dp"
+      android:paddingVertical="4dp"
+      android:textColor="?colorOnSecondary"
+      android:textSize="10sp"
+      app:layout_constraintBottom_toBottomOf="@+id/itemImageRatingTextView"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/itemImageRatingTextView"
+      tools:ignore="SmallSp"
+      tools:text="2021-10-21" />
 
     <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/itemImageNameTextView"
